--- a/vercel.json
+++ b/vercel.json
@@ -26,7 +26,7 @@
   ],
   "env": {
     "NODE_ENV": "production",
-    "JWT_SECRET": "@secret-key@",
+    "JWT_SECRET": "@jwt-secret",
     "MONGODB_URI": "@mongodb-uri@"
   }
 }
