--- a/vercel.json
+++ b/vercel.json
@@ -26,7 +26,7 @@
   ],
   "env": {
     "NODE_ENV": "production",
-    "JWT_SECRET": "@jwt-secret",
+    "JWT_SECRET": "eyJhbGciOiJIUzUxMiIsInR5cCI6IkpXVCJ9",
     "MONGODB_URI": "@mongodb-uri@"
   }
 }
