--- a/vercel.json
+++ b/vercel.json
@@ -27,6 +27,6 @@
   "env": {
     "NODE_ENV": "production",
     "JWT_SECRET": "eyJhbGciOiJIUzUxMiIsInR5cCI6IkpXVCJ9",
-    "MONGODB_URI": "@mongodb-uri@"
+    "MONGODB_URI": "mongodb+srv://33:ss33@cluster0.hhxy1qw.mongodb.net/?appName=Cluster0"
   }
 }
